--- a/src/pages/Style.css
+++ b/src/pages/Style.css
@@ -122,7 +122,7 @@
     background-color: #1B3864;
     border-radius: 50px;
     height: 42px;
-    width: 275px;
+    width: 280px;
     cursor: pointer;
     color: rgba(255, 255, 255, 1);
     font-size: 20px;
@@ -134,3 +134,18 @@
     background-color: #39609b;
     transform: scale(1.01);
   }
+
+  .btm-div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 5rem;
+    height: 1.5rem;
+  }
+
+  .btm-question {
+    margin-right: 5px;
+  }
+
+
+
