--- a/src/login/Login.css
+++ b/src/login/Login.css
@@ -1,9 +1,12 @@
 .full-login-page {
     display: flex;
+    flex-direction: row;
+    height: 100%;
 }
 
-.login-leftside-div {
+.login-rightside-div {
     height: 100vh;
+    /* height: 100%; */
     margin-left: auto;
     width: 40vw;
     background: linear-gradient(30deg, rgba(32, 71, 108, 0.8) 0%, rgba(185, 165, 116, 0.9) 100%);
@@ -11,23 +14,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-} 
+}
 
 .login-form-div {
     height: 100vh;
-    margin: auto ;
+    margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}   
+}
 
 .login-form-title {
     font-size: 72px;
-}
-
-.login-input-span {
-    position: absolute;
+    margin: 1rem;
 }
 
 .login-input-form {
@@ -35,23 +35,38 @@
     border-radius: 50px;
     border: 2px solid #1b212b26;
     height: 42px;
+    width: 750px;
     position: relative;
-    width: 600px;
-    margin: 1rem;
-    display: flex;
-    align-items: center;
 }
 
 .login-mail-icon {
-    /* position: absolute; */
     font-size: 18px;
-    left: 3.4rem;
+    left: 1.75rem;
+    top: 15px;
+}
+
+.login-input-container {
+    position: relative;
+    margin: 1.25rem;
+}
+
+.login-input-container .login-show-hide-btn,
+.login-input-container .login-mail-icon {
+    position: absolute;
+}
+
+input {
+    padding-left: 4rem;
+    font-size: 18px;
 }
 
 .login-show-hide-btn {
-    /* position: relative; */
-    /* left: 1.6rem; */
-    margin: auto;
+    background-color: transparent;
+    border: none;
+    font-size: 18px;
+    left: 1.4rem;
+    top: 15px;
+    cursor: pointer;
 }
 
 .login-btn {
@@ -69,17 +84,51 @@
 .login-btn:hover {
     background-color: #39609b;
     transform: scale(1.01);
-  }
+}
 
 .forget-password {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 0.1rem;
+    color:#000;
+    height: 1.6rem;
+    font-weight: 700;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .forget-password:hover {
     text-decoration: underline;
+}
+
+.right-login-title {
+    font-size: 72px;
+    color: rgba(255, 255, 255, 1);
+    margin: 0;
+}
+
+.login-slogan {
+    color: rgba(255, 255, 255, 1);
+    padding-left: 10rem;
+    padding-right: 10rem;
+    font-size: 30px;
+}
+
+.sign-up-btn {
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 50px;
+    height: 42px;
+    width: 225px;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 600;
+    border: none;
+    margin: 0.75rem;
+}
+
+.sign-up-btn:hover {
+    background-color: #E5E0D6;
+    transform: scale(1.01);
 }
 
 .login-big-ellipse {
@@ -90,9 +139,9 @@
     width: 170px;
     height: 170px;
     border-radius: 50%;
-  }
+}
 
-  .login-small-ellipse {
+.login-small-ellipse {
     width: 80px;
     height: 80px;
     position: absolute;
@@ -100,9 +149,9 @@
     top: 160px;
     border-radius: 50%;
     background: linear-gradient(75deg, rgb(27.47, 56.43, 99.88) 0%, rgb(184.88, 165.46, 115.55) 100%);
-  }
+}
 
-  .login-polygon {
+.login-polygon {
     clip-path: polygon(40% 5%, 55% 100%, 25% 100%);
     transform: rotate(220deg);
     /* might need to make this from bottom */
@@ -110,4 +159,26 @@
     right: 650px;
     position: absolute;
     background: linear-gradient(180deg, #1B3864 10%, #B9A574 100%);
-  }
+}
+
+@media (max-width: 768px) {
+    .login-big-ellipse {
+        right: 10px; /* Adjust the position */
+        top: 10px;
+        width: 100px; /* Adjust the dimensions */
+        height: 100px;
+    }
+
+    .login-small-ellipse {
+        right: 20px; /* Adjust the position */
+        top: 80px;
+        width: 40px; /* Adjust the dimensions */
+        height: 40px;
+    }
+
+    .login-polygon {
+        right: 50px; /* Adjust the position */
+        top: 500px;
+        /* Adjust other styles for small screens here */
+    }
+}
