--- a/src/login/Login.css
+++ b/src/login/Login.css
@@ -2,13 +2,20 @@
     display: flex;
     flex-direction: row;
     height: 100%;
+    width: 100%;
+    height: 1064px;
+    width: 2240px;
+    position:absolute;
 }
 
 .login-rightside-div {
-    height: 100vh;
-    /* height: 100%; */
+    height: 1064px;
+    height: 100%;
     margin-left: auto;
-    width: 40vw;
+    height: 1064px;
+    width: 896px;
+    right: 0;
+    top: 0;
     background: linear-gradient(30deg, rgba(32, 71, 108, 0.8) 0%, rgba(185, 165, 116, 0.9) 100%);
     display: flex;
     flex-direction: column;
@@ -17,7 +24,7 @@
 }
 
 .login-form-div {
-    height: 100vh;
+    height: 1064px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -152,33 +159,11 @@ input {
 }
 
 .login-polygon {
-    clip-path: polygon(40% 5%, 55% 100%, 25% 100%);
+
+    clip-path: polygon(20% 0%, 38% 100%, 2% 100%);
     transform: rotate(220deg);
-    /* might need to make this from bottom */
-    top: 880px;
-    right: 650px;
+    top: 835px;
+    right: 680px;
     position: absolute;
     background: linear-gradient(180deg, #1B3864 10%, #B9A574 100%);
-}
-
-@media (max-width: 768px) {
-    .login-big-ellipse {
-        right: 10px; /* Adjust the position */
-        top: 10px;
-        width: 100px; /* Adjust the dimensions */
-        height: 100px;
-    }
-
-    .login-small-ellipse {
-        right: 20px; /* Adjust the position */
-        top: 80px;
-        width: 40px; /* Adjust the dimensions */
-        height: 40px;
-    }
-
-    .login-polygon {
-        right: 50px; /* Adjust the position */
-        top: 500px;
-        /* Adjust other styles for small screens here */
-    }
 }
